--- a/computational_bio/templates/index.html
+++ b/computational_bio/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Specimen Size Calculator</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel='stylesheet' href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
 <body>
     <h1>Specimen Size Calculator</h1>
@@ -41,5 +41,6 @@
         <tbody id="measurements">
         </tbody>
     </table>
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
 </html>
